cluster/prod/traefik/traefik/traefik-middleware.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: traefik
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: default-headers
  namespace: traefik
spec:
  headers:
    browserXssFilter: true
    contentTypeNosniff: true
    customResponseHeaders:
      server: ""
      x-applicationversion: ""
      x-ua-compatible: ""
      x-robots-tag: none
    frameDeny: true
    customFrameOptionsValue: SAMEORIGIN
    sslRedirect: true
    stsSeconds: 31536000
    stsPreload: true
    forceSTSHeader: true
    referrerPolicy: no-referrer
    isDevelopment: false
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: default-compress
  namespace: traefik
spec:
  compress: {}
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-sso
  namespace: traefik
spec:
  forwardAuth:
    address: http://traefik-forward-auth:4181
    authResponseHeaders:
    - X-Forwarded-User
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: default-middlewares-chain
  namespace: traefik
spec:
  chain:
    middlewares:
    - name: traefik-sso
    - name: default-headers
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: nextcloud-redirectregex
  namespace: traefik
spec:
  redirectRegex:
    regex: "https://(.*)/.well-known/(card|cal)dav"
    replacement: "https://${1}/remote.php/dav/"
    permanent: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: calibre-headers
  namespace: traefik
spec:
  headers:
    customRequestHeaders:
      x-calibre-auth: admin
